@@ -6,31 +6,20 @@ initrd=/boot/initrd.gz
 read-write
 
 # Standard boot images
-#image[sun4c,sun4d,sun4m]=/boot/vmlinuz-sparc32
-#  label=install
 image[sun4u]=/boot/vmlinuz-sparc64
   label=install
 
 # Expert boots
-#image[sun4c,sun4d,sun4m]=/boot/vmlinuz-sparc32
-#  label=expert
-#  append="priority=low"
 image[sun4u]=/boot/vmlinuz-sparc64
   label=expert
   append="priority=low"
 
 # Rescue boots
-#image[sun4c,sun4d,sun4m]=/boot/vmlinuz-sparc32
-#  label=rescue
-#  append="rescue/enable=true"
 image[sun4u]=/boot/vmlinuz-sparc64
   label=rescue
   append="rescue/enable=true"
 
 # Auto install boots
-#image[sun4c,sun4d,sun4m]=/boot/vmlinuz-sparc32
-#  label=auto
-#  append="auto=true priority=critical"
 image[sun4u]=/boot/vmlinuz-sparc64
   label=auto
   append="auto=true priority=critical"
