@@ -1,17 +1,13 @@
-# floppy needs root to build, so cannot autobuild, so is disabled for now
-#SUBARCH_SUPPORTED = sparc32 sparc64 combined
-SUBARCH_SUPPORTED = sparc64 combined
- 
+MEDIUM_SUPPORTED = cdrom netboot miniiso
+
 VERSIONED_SYSTEM_MAP = t
 
 KERNELMAJOR = 2.6
-BASEVERSION = 2.6.21-2
-#KERNELIMAGEVERSION = $(BASEVERSION)-sparc32 $(BASEVERSION)-sparc64
-KERNELIMAGEVERSION = $(BASEVERSION)-sparc64
+KERNELVERSION = 2.6.21-2-sparc64
 
 KERNEL_FLAVOUR = di
-KERNELVERSION = $(foreach ver,${KERNELIMAGEVERSION},$(ver))
-KERNELNAME = $(foreach ver,${KERNELVERSION},vmlinuz-$(ver))
+KERNELNAME = vmlinuz-${KERNELVERSION}
+KERNELIMAGEVERSION = ${KERNELVERSION}
 
 arch_boot_screens:
 arch_tree:
