@@ -1,1 +1,0 @@
-MEDIUM_SUPPORTED = cdrom miniiso-2.6
