@@ -1,12 +1,12 @@
 MEDIA_TYPE = netboot image
  
-MANIFEST-BOOT = "tftp boot image for sparc32"
-
-EXTRANAME = netboot/2.6/
+TYPE = netboot
 
 TARGET = $(BOOT)
+EXTRANAME = $(MEDIUM)/
 
-TYPE = netboot
+MANIFEST-BOOT = "tftp boot image for sparc64"
+
 .PHONY: arch_boot
 arch_boot:
 	gzip -c $(TEMP)/System.map-$(KERNELIMAGEVERSION) >$(TEMP)/System.map.gz
