@@ -1,2 +1,0 @@
-# Only available on sparc64.
-usb-modules-${kernel:Version}
