@@ -6,8 +6,6 @@ if [ -z "$1" ]; then
 fi
 
 case "$1" in 
-  *sparc32) echo "sparc32" ;;
-  *sparc64) echo "sparc64" ;;
   *s390) echo "UNAME_MACHINE=s390" ;;
   *s390x) echo "UNAME_MACHINE=s390x" ;;
 esac
